src/tess/tl/test/pass/test_char_literal.tl
#module main
#import <cstdio.tl>

main() {
    c := '\0'
    c_printf(c"char c = %u\n", c)
    0
}
